--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1849,7 +1849,7 @@ input, select, textarea {
 			position: absolute;
 			left: 0;
 			top: 1.3em;
-			background-color: #d52349;
+			background-color: #4B0082;
 			height: 3.5em;
 			text-align: center;
 			color: #fff;
@@ -1864,7 +1864,7 @@ input, select, textarea {
 				position: absolute;
 				bottom: 0;
 				right: -1.2em;
-				border-left: solid 1.25em #d52349;
+				border-left: solid 1.25em #4B0082;
 				border-top: solid 1.8em transparent;
 				border-bottom: solid 1.8em transparent;
 			}
@@ -2096,7 +2096,6 @@ input, select, textarea {
 
 			#nav > ul > li {
 				display: inline-block;
-				font-style: italic;
 				margin: 0 0.35em 0 0.35em;
 			}
 
@@ -2124,7 +2123,13 @@ input, select, textarea {
 					background: #4B0082;
 					color: #fff !important;
 					font-weight: 700;
+					transition: transform .5s;
 				}
+				#nav > ul > li.current > a:hover {
+					transform: scale(1.2);
+				}
+
+
 
 	.dropotron {
 		border-radius: 5px;
